# thor

./: .gitignore  LICENSE  README.md  build.gradle  local.properties
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/io/ipfs/: FileServer.java  IPFSUtilsTest.java  IpfsAddTest.java  IpfsAutoRelayTest.java  IpfsCatTest.java  IpfsConnectTest.java  IpfsDaemonTest.java  IpfsDnsAddress.java  IpfsFindPeer.java  IpfsHamtTest.java  IpfsQuicTest.java  (+17 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  netty_quic_boringssl.c  netty_quic_quiche.c
app/src/main/java/io/: Closeable.java  LogUtils.java
app/src/main/java/threads/: LogUtils.java
app/src/main/proto/: message.proto  record.proto  unixfs.proto
app/src/main/res/drawable/: autorenew.xml  battlenet.xml  browse.xml  browser.xml  ic_launcher_foreground.xml  lock.xml  lock_open.xml  popup.xml  round.xml  round_dark.xml
app/src/main/res/layout/: abc_search_dropdown_item_icons_2line.xml  activity_main.xml  booksmark_view.xml  history.xml  history_view.xml  menu_overflow.xml  settings_view.xml
app/src/main/res/layout-sw600dp/: activity_main.xml
app/src/main/res/menu/: menu_find_action_mode.xml  menu_main.xml  menu_searchable.xml
app/src/main/res/menu-sw600dp/: menu_main.xml
app/src/main/res/raw/: magic.txt  pgl_yoyo_org.txt  privacy_policy.html
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: searchable.xml
gradle/wrapper/: gradle-wrapper.properties
lite/: build.gradle
(+1629 files in other folders)
